# microservice-pixelman-django

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  dockerfile.production  pyproject.toml  server.sh
auth/: base.py  jwt.py  rest.py  roles.py  settings.py  urls.py  vault.py
infrastructure/event/: updateUser.py
infrastructure/kafka/: consumer.py  producer.py  setting.py
infrastructure/management/commands/: kafka.py
infrastructure/service/: __init__.py
infrastructure/service/security/: __init__.py  encrypt.py
middleware/database/: middleware.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_address.py  0003_remove_userprofiles_city_and_more.py  0004_alter_userprofiles_username.py  0005_product_cart.py  0006_remove_cart_total_price_shoppingcart.py  0007_alter_product_price.py  0008_alter_shoppingcart_total.py
